--- a/plugin.yml
+++ b/plugin.yml
@@ -9,3 +9,6 @@ commands:
    destroyer:
       description: Main command
       usage: /destroyer [name]
+   dest:
+      description: Main command
+      usage: /destroyer [name]
