bugfixes; adds map reset, boundaries, stats and bunch of other things

--- a/plugin.yml
+++ b/plugin.yml
@@ -9,6 +9,9 @@ commands:
    destroyer:
       description: Main command
       usage: /destroyer [name]
+   destadmin:
+      description: Main command
+      usage: /destroyer [name]
    dest:
       description: Main command
       usage: /destroyer [name]
